# claude-usage

./: CLAUDE.md  Cargo.toml  LICENSE.txt  Makefile  README.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/: index.html
hook/: collect-session-stats.py  register.py
src/: collect_session_stats.rs  main.rs
