[package]
name = "claude-usage"
version = "0.2.1"
edition = "2021"

[[bin]]
name = "claude-usage"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
comfy-table = "7"
colored = "2"
dirs = "5"
