[package]
name = "claude-usage"
version = "0.3.2"
edition = "2021"

[[bin]]
name = "claude-usage"
path = "src/main.rs"

[[bin]]
name = "collect-session-stats"
path = "src/collect_session_stats.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
comfy-table = "7"
colored = "2"
dirs = "5"
